Fix timezone in header of column

--- a/src/apps/recordingsce/views/recordings-table.html
+++ b/src/apps/recordingsce/views/recordings-table.html
@@ -65,7 +65,7 @@
 		<tr>
 			<th>№</th>
 			<th>{{i18n.recordingsce.recordingsTable.columnHeader.direction}}</th>
-			<th>{{i18n.recordingsce.recordingsTable.columnHeader.datetime}}</th>
+			<th>{{i18n.recordingsce.recordingsTable.columnHeader.datetime}} {{timezone}}</th>
 			<th>{{i18n.recordingsce.recordingsTable.columnHeader.user}}</th>
 			<th>{{i18n.recordingsce.recordingsTable.columnHeader.device}}</th>
 			<th>{{i18n.recordingsce.recordingsTable.columnHeader.dialerNumber}}</th>
