Change order of columns && Fix datepicker && Remove direction column

--- a/src/apps/recordingsce/style/app.scss
+++ b/src/apps/recordingsce/style/app.scss
@@ -12,9 +12,8 @@
 		clear: both;
 	}
 
-	#main_topbar_current_app_name[data-name="recordings"] {
-		display: inline-block !important;
-		vertical-align: middle;
+	button.ui-datepicker-close {
+		display: none;
 	}
 }
 
