--- a/src/apps/recordingsce/style/app.css
+++ b/src/apps/recordingsce/style/app.css
@@ -7,9 +7,9 @@
     display: block;
     content: '';
     clear: both; }
-  .recordings-app #main_topbar_current_app_name[data-name="recordings"] {
-    display: inline-block !important;
-    vertical-align: middle; }
+  .recordings-app button.ui-datepicker-close {
+    display: none; }
+
 #recordingsce_app_container {
   /* Override dataTables plugin images to base 64 */
   /* Override datepicker and timepicker */
